--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,12 @@ body {
 
   .custom-box {
     background-color: #002144;
-    height: 100px; /* Προσαρμόστε το ύψος όπως επιθυμείτε */
+    height: 350px; /* Προσαρμόστε το ύψος όπως επιθυμείτε */
 }
 
-.booking-cta {
-    margin-top: 20px; /* Προσθέστε κάποιο κενό από την κορυφή για να διαχωρίσετε το flight booking bar από το κείμενο */
-}
+/* .booking-cta {
+    margin-top: 20px; 
+} */
 
 
 
@@ -35,11 +35,18 @@ body {
 }
 
 .booking-cta {
-    margin-top: 20px;
+    margin-top: -270px; /* Προσαρμογή της αρνητικής τιμής για να μετακινήσει πάνω το Flight Booking Bar */
+    position: relative; /* Χρησιμοποίησε την σχετική θέση */
+    z-index: 3; /* Αυξήστε το z-index για να εμφανίζεται επάνω από το Flight Booking Bar */
 }
 
+/* .booking-cta {
+    margin-top: 20px;
+} */
+
 .booking-cta h1 {
-    font-size: 28px;
+    font-size: 45px;
+    color: white;
 }
 
 .booking-form {
@@ -47,6 +54,9 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: -250px; /* Προσαρμογή της αρνητικής τιμής για να μετακινήσει πάνω το Flight Booking Bar */
+    position: relative; /* Χρησιμοποίησε την σχετική θέση */
+    z-index: 2; /* Αυξήστε το z-index για να εμφανίζεται πίσω από το κείμενο "Book Your Flight Today" */
 }
 
 .booking-form .form-group {
@@ -96,8 +106,6 @@ body {
 .submit-btn:hover {
     background-image: linear-gradient(-135deg, #1C5480, #1E2A66);
 }
-
-
 
 
 /* minibox */
