--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,12 @@ body {
 
 /* booking bar */
 
+.form-label{
+    font-size: 14px;
+    color: #288CCA; 
+    font-weight: bold; 
+}
+
 .custom-box {
     background-color: #002144;
     color: #fff;
@@ -108,6 +114,8 @@ body {
 }
 
 
+
+
 /* minibox */
 
 
@@ -140,3 +148,5 @@ body {
 
     line-height: 50px; /* Κατακόρυφη ευθυγράμμιση στο κέντρο */
 }
+
+
