--- a/styles.css
+++ b/styles.css
@@ -148,8 +148,10 @@ body {
 
     line-height: 50px; /* Κατακόρυφη ευθυγράμμιση στο κέντρο */
 }
+
 .card {
-    padding: 20px;
+    padding: 0px;
+    border-radius: 10px;
 }
 
 
@@ -169,6 +171,22 @@ body {
 .card-text {
     margin-bottom: .75rem;
     font-size: 1rem;
+}
+
+.img-fluid {
+    border-radius: 10px 10px 0 0;
+    /* Αυτό θα θέσει τις γωνίες όπως ζητήσατε:
+       πάνω-αριστερά: 0
+       πάνω-δεξιά: 20px
+       κάτω-δεξιά: 30px
+       κάτω-αριστερά: 0
+    */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
 
