--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ body {
 }
 
 .submit-btn {
-    background-image: linear-gradient(-135deg, #288CCA, #2B3D91);
+    background-image: linear-gradient(-135deg, #f94ca4, #ff4b09, #288CCA, #2B3D91);
     color: #fff;
     padding: 20px 40px; /* Αλλαγή του padding για να αυξηθεί το μέγεθος οριζόντια και κατακόρυφα */
     font-size: 18px;
@@ -149,6 +149,13 @@ body {
     line-height: 50px; /* Κατακόρυφη ευθυγράμμιση στο κέντρο */
 }
 
+
+/* h2 */
+.namechange{
+	color: #002144;
+	font-weight: bold;
+}
+
 .card {
     padding: 0px;
     border-radius: 10px;
@@ -173,20 +180,48 @@ body {
     font-size: 1rem;
 }
 
-.img-fluid {
-    border-radius: 10px 10px 0 0;
+/* .img-fluid {
+    border-radius: 10px 10px 0 0; */
     /* Αυτό θα θέσει τις γωνίες όπως ζητήσατε:
        πάνω-αριστερά: 0
        πάνω-δεξιά: 20px
        κάτω-δεξιά: 30px
        κάτω-αριστερά: 0
     */
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     align-items: center;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+} */
+
+@media (max-width: 576px) {
+    .img-fluid {
+        border-radius: 10px 10px 0 0;
+    }
+    .text-container{
+        padding-left: 25px; 
+        padding-right: 2px;
+    }
 }
 
+@media (min-width: 577px) and (max-width: 770px) {
+    .img-fluid {
+        border-radius: 10px 10px 0 0;
+    }
+    .text-container{
+        padding-left: 25px; 
+        padding-right: 2px;
+    }
+}
 
+@media (min-width: 769px) {
+    .img-fluid {
+        border-radius: 10px 0 0 10px;
+    }
+    .text-container{
+        padding-left: 0px; 
+        padding-right: 2px;
+    }
+}
