Login and Sign Up done

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 @media(max-width: 991px){
     .sidebar{
-        background-color: #002144;
+        background-color: #3c9aff;
         backdrop-filter: blur(10px);
     }
 }
