--- a/loginAregister.css
+++ b/loginAregister.css
@@ -11,12 +11,12 @@
 
 .logo-container {
     position: absolute;
-    top: 10px; /* Ρυθμίστε την απόσταση από την κορυφή της πλοήγησης */
-    left: 10px; /* Ρυθμίστε την απόσταση από το αριστερό άκρο της πλοήγησης */
+    top: 10px; 
+    left: 10px; 
 }
 
 .logo-container img {
-    width: 200px; /* Προσαρμόστε το μέγεθος της εικόνας όπως επιθυμείτε */
+    width: 200px; 
 }
 
 
