--- a/styleprofile.css
+++ b/styleprofile.css
@@ -11,8 +11,8 @@ body {
     flex: 1;
     max-width: 1800px;
     margin: 0 auto;
-    padding-left: 0; /* Αφαίρεσε το περιθώριο από αριστερά */
-    padding-right: 0; /* Αφαίρεσε το περιθώριο από δεξιά */
+    padding-left: 0; 
+    padding-right: 0;
 }
 
 
@@ -20,8 +20,8 @@ body {
     background-color: #002144;
     color: white;
     height: 100%;
-    padding-left: 0; /* Αφαίρεσε το περιθώριο από αριστερά */
-    padding-right: 0; /* Αφαίρεσε το περιθώριο από δεξιά */
+    padding-left: 0; 
+    padding-right: 0; /
 }
 
 .sidebar ul {
@@ -42,8 +42,8 @@ body {
     background-color: white;
     padding: 20px;
     flex: 1;
-    padding-left: 0; /* Αφαίρεσε το περιθώριο από αριστερά */
-    padding-right: 0; /* Αφαίρεσε το περιθώριο από δεξιά */
+    padding-left: 0; 
+    padding-right: 0;
 }
 
 .profile-header {
@@ -90,7 +90,7 @@ body {
 
 
 .custom-col {
-    max-width: 12.51%; /* Το 16.666667% αντιστοιχεί στο πλάτος του col-md-2 σε Bootstrap */
+    max-width: 12.51%;
     background-color: #002144;
 }
 
